--- a/index.html
+++ b/index.html
@@ -1815,7 +1815,32 @@
         </div>
     </div>
 
-    <!-- No profile section here, it's in the dedicated profile tab -->
+    <!-- Your Profile Section -->
+    <div class="profile-section" id="profileSection">
+        <h3 class="section-title"><i class="fas fa-user"></i> Your Profile</h3>
+        <div class="profile-card">
+            <div class="profile-avatar" id="profileAvatar">
+                <i class="fas fa-user"></i>
+            </div>
+            <div class="profile-info">
+                <div class="profile-name" id="profileName">Player</div>
+                <div class="profile-stats">
+                    <div class="stat">
+                        <i class="fas fa-trophy"></i>
+                        <span class="stat-value" id="statWins">0</span> Wins
+                    </div>
+                    <div class="stat">
+                        <i class="fas fa-gamepad"></i>
+                        <span class="stat-value" id="statGames">0</span> Games
+                    </div>
+                    <div class="stat">
+                        <i class="fas fa-percentage"></i>
+                        <span class="stat-value" id="statWinRate">0%</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Recent Activity Section -->
     <div class="recent-activity-section">
