--- a/index.html
+++ b/index.html
@@ -1665,15 +1665,8 @@
     <div class="welcome-banner">
         <div class="welcome-content">
             <h2>Welcome to Game Hub Pro!</h2>
-            <p>Play classic games, challenge friends, and climb the leaderboard!</p>
-            <div class="welcome-buttons">
-                <button class="welcome-btn" id="playNowBtn">
-                    <i class="fas fa-gamepad"></i> Play Now
-                </button>
-                <a href="https://t.me/AbroTemTechnologies" class="welcome-btn secondary" target="_blank">
-                    <i class="fas fa-bullhorn"></i> Join Official Channel
-                </a>
-            </div>
+            <p>Play classic games, challenge friends, and climb the leaderboard!</p
+            <h2>Check Bottom and Navigate<br>to GAMES to play</h2>                                                   
         </div>
     </div>
 
@@ -1690,9 +1683,6 @@
                 <div class="game-showcase-content">
                     <h4>TIC-TAC-TOE ❌⭕</h4>
                     <p>Classic game of X's and O's with multiple difficulty levels!</p>
-                    <button class="game-showcase-btn" id="playTTTBtn">
-                        <i class="fas fa-play"></i> Play Now
-                    </button>
                 </div>
             </div>
             
@@ -1704,9 +1694,6 @@
                 <div class="game-showcase-content">
                     <h4>ROCK-PAPER-SCISSORS ✊✋✌️</h4>
                     <p>Test your luck and strategy in this classic hand game!</p>
-                    <button class="game-showcase-btn" id="playRPSBtn">
-                        <i class="fas fa-play"></i> Play Now
-                    </button>
                 </div>
             </div>
         </div>
@@ -2109,47 +2096,43 @@
         </div>
 
         <!-- Profile Section -->
-        <div id="profileSection" class="section-container profile-container">
-            <div class="header">
-                <h1>Profile</h1>
-                <div class="badge">YOU</div>
-                <div class="version">v2.0.0</div>
+        <!-- Your Profile Section -->
+    <div class="profile-section" id="profileSection">
+        <h3 class="section-title"><i class="fas fa-user"></i> Your Profile</h3>
+        <div class="profile-card">
+            <div class="profile-avatar" id="profileAvatar">
+                <i class="fas fa-user"></i>
             </div>
-
-            <div class="profile-header">
-                <div class="profile-avatar-large" id="profileAvatarLarge">
-                    <i class="fas fa-user"></i>
-                </div>
-                <div class="profile-username" id="profileUsername">@username</div>
-                <div class="profile-fullname" id="profileFullname">Player Name</div>
-            </div>
-
-            <div class="profile-stats-row">
-                <div class="profile-stat-item">
-                    <div class="profile-stat-value" id="profileTotalWins">0</div>
-                    <div class="profile-stat-label">Wins</div>
-                </div>
-                <div class="profile-stat-item">
-                    <div class="profile-stat-value" id="profileTotalGames">0</div>
-                    <div class="profile-stat-label">Games</div>
-                </div>
-                <div class="profile-stat-item">
-                    <div class="profile-stat-value" id="profileWinRate">0%</div>
-                    <div class="profile-stat-label">Win Rate</div>
+            <div class="profile-info">
+                <div class="profile-name" id="profileName">Player</div>
+                <div class="profile-stats">
+                    <div class="stat">
+                        <i class="fas fa-trophy"></i>
+                        <span class="stat-value" id="statWins">0</span> Wins
+                    </div>
+                    <div class="stat">
+                        <i class="fas fa-gamepad"></i>
+                        <span class="stat-value" id="statGames">0</span> Games
+                    </div>
+                    <div class="stat">
+                        <i class="fas fa-percentage"></i>
+                        <span class="stat-value" id="statWinRate">0%</span>
+                    </div>
                 </div>
             </div>
-
-            <div class="profile-section-title">
-                <i class="fas fa-history"></i> Recent Games
-            </div>
-
-            <div id="profileHistoryLoading" class="loading">
-                <div class="spinner"></div>
-                <p>Loading game history...</p>
-            </div>
-            <ul class="history-list" id="profileHistoryList"></ul>
         </div>
     </div>
+
+    <!-- Recent Activity Section -->
+    <div class="recent-activity-section">
+        <h3 class="section-title"><i class="fas fa-history"></i> Recent Activity</h3>
+        <div id="dashboardHistoryLoading" class="loading">
+            <div class="spinner"></div>
+            <p>Loading recent games...</p>
+        </div>
+        <ul class="history-list" id="dashboardHistoryList"></ul>
+    </div>
+</div>
 
     <div class="connection-status" id="connectionStatus">
         <i class="fas fa-circle"></i>
