--- a/index.html
+++ b/index.html
@@ -1665,8 +1665,15 @@
     <div class="welcome-banner">
         <div class="welcome-content">
             <h2>Welcome to Game Hub Pro!</h2>
-            <p>Play classic games, challenge friends, and climb the leaderboard!</p
-            <h2>Check Bottom and Navigate<br>to GAMES to play</h2>                                                   
+            <p>Play classic games, challenge friends, and climb the leaderboard!</p>
+            <div class="welcome-buttons">
+                <button class="welcome-btn" id="playNowBtn">
+                    <i class="fas fa-gamepad"></i> Play Now
+                </button>
+                <a href="https://t.me/AbroTemTechnologies" class="welcome-btn secondary" target="_blank">
+                    <i class="fas fa-bullhorn"></i> Join Official Channel
+                </a>
+            </div>
         </div>
     </div>
 
@@ -1683,6 +1690,9 @@
                 <div class="game-showcase-content">
                     <h4>TIC-TAC-TOE ❌⭕</h4>
                     <p>Classic game of X's and O's with multiple difficulty levels!</p>
+                    <button class="game-showcase-btn" id="playTTTBtn">
+                        <i class="fas fa-play"></i> Play Now
+                    </button>
                 </div>
             </div>
             
@@ -1694,6 +1704,9 @@
                 <div class="game-showcase-content">
                     <h4>ROCK-PAPER-SCISSORS ✊✋✌️</h4>
                     <p>Test your luck and strategy in this classic hand game!</p>
+                    <button class="game-showcase-btn" id="playRPSBtn">
+                        <i class="fas fa-play"></i> Play Now
+                    </button>
                 </div>
             </div>
         </div>
@@ -2095,7 +2108,7 @@
             </div>
         </div>
 
-       <!-- Profile Section -->
+        <!-- Profile Section -->
         <div id="profileSection" class="section-container profile-container">
             <div class="header">
                 <h1>Profile</h1>
